# hiveframe

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  MODULARIZATION_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  README.md  ROADMAP.md  SWARMQL_2_SUMMARY.md  __init__.py  demo.py  demo_progressive.py  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  resilience.py  streaming_enhanced.py
.github/workflows/: azure-static-web-apps-ashy-field-0a86da903.yml  ci.yml
docker/: README.md  prometheus.yml
docs/: api-reference.md  core-concepts.md  docusaurus.config.js  getting-started.md  index.md  package-lock.json  package.json  sidebars.js  swarmql-2.0.md
docs/docs/explanation/: abc-optimization.md  architecture-overview.md  colony-temperature.md  comparison-spark.md  index.md  pheromone-signaling.md  streaming-windows-watermarks.md  three-tier-workers.md  waggle-dance-protocol.md
docs/docs/how-to/: configure-logging.md  configure-retry.md  configure-windows.md  connect-http.md  connect-kafka.md  connect-postgres.md  delivery-guarantees.md  delta-time-travel.md  enable-tracing.md  handle-errors-dlq.md  index.md  manage-watermarks.md  read-write-parquet.md  setup-monitoring.md  use-circuit-breaker.md  use-delta-lake.md
docs/docs/reference/: advanced-swarm.md  ai.md  autonomous.md  connectors.md  core.md  dashboard.md  dataframe.md  exceptions.md  index.md  kubernetes.md  monitoring.md  resilience.md  sql.md  storage.md  streaming.md
docs/docs/tutorials/: dataframe-basics.md  first-pipeline.md  getting-started.md  index.md  kubernetes-deployment.md  sql-analytics.md  streaming-application.md
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
examples/: demo.py  demo_docker_multicolony.py  demo_notebook_ui.py  demo_phase2_adaptive.py  demo_phase2_federation.py  demo_phase2_storage.py  demo_phase3.py  demo_phase4.py  demo_phase5.py  demo_progressive.py  demo_sql.py  demo_storage.py  sample_notebook.ipynb  swarmql_2_demo.py
src/hiveframe/: __init__.py  aggregations.py  connectors.py  core.py  dataframe.py  dlq.py  exceptions.py  monitoring.py  streaming.py  utils.py
src/hiveframe/advanced_swarm/: __init__.py  federated_learning.py  hybrid_swarm.py  quantum_ready.py
src/hiveframe/ai/: __init__.py  code_generation.py  data_preparation.py  intelligent_discovery.py  llm_platform.py  natural_language.py
src/hiveframe/autonomous/: __init__.py  cost_optimization.py  predictive_maintenance.py  self_tuning.py  workload_prediction.py
src/hiveframe/challenges/: __init__.py  data_quality.py  error_handling.py  scale_performance.py
src/hiveframe/connectors/: __init__.py  messaging.py  sinks.py  sources.py
src/hiveframe/dashboard/: __init__.py  api.py  components.py  server.py
src/hiveframe/dataframe/: __init__.py  aggregations.py  columns.py  frame.py  grouped.py  schema.py
src/hiveframe/distributed/: __init__.py  federation.py  locality.py  partitioning.py  speculative.py
src/hiveframe/ecosystem/: __init__.py  governance.py  marketplace.py  partners.py  research.py
src/hiveframe/global_scale/: __init__.py  edge_computing.py  mesh_architecture.py  mobile_optimization.py  satellite_integration.py
src/hiveframe/industry_solutions/: __init__.py  finance.py  government.py  healthcare.py  manufacturing.py  retail.py
src/hiveframe/k8s/: __init__.py  cluster.py  manifests.py  operator.py
src/hiveframe/lakehouse/: __init__.py  catalog.py  delta_sharing.py
src/hiveframe/ml/: __init__.py  automl.py  feature_store.py  mlflow_integration.py  model_serving.py
src/hiveframe/monitoring/: __init__.py  health.py  logging.py  metrics.py  profiling.py  tracing.py
src/hiveframe/notebooks/: README.md  __init__.py  collaboration.py  format.py  gpu_cell.py  kernel.py  ui.py
src/hiveframe/optimizer/: __init__.py  aqe.py  cost.py  planner.py  rules.py  vectorized.py
src/hiveframe/resilience/: __init__.py  bulkhead.py  circuit_breaker.py  executor.py  retry.py  timeout.py
src/hiveframe/sql/: __init__.py  context.py  executor.py  parser.py  types.py
src/hiveframe/storage/: __init__.py  cache.py  delta.py  formats.py  honeystore.py  iceberg.py  parquet.py
src/hiveframe/streaming/: __init__.py  aggregators.py  cdc.py  cep.py  core.py  delivery.py  materialized_views.py  processor.py  realtime.py  state.py  watermarks.py  windows.py
tests/: __init__.py  test_connectors.py  test_core.py  test_dataframe.py  test_distributed.py  test_exceptions.py  test_monitoring.py  test_optimizer.py  test_phase2_optimizer.py  test_phase2_storage.py  test_phase3_lakehouse.py  test_phase3_ml.py  test_phase3_notebooks.py  test_phase3_realtime.py  test_phase4_advanced_swarm.py  test_phase4_ai.py  test_phase4_autonomous.py  test_phase5_global_scale.py  test_resilience.py  test_sql.py  test_storage.py  test_streaming.py
website/: README.md  docusaurus.config.ts  index.html  script.js  sidebars.ts  styles.css
website/docs/: intro.md
website/docs/explanation/: bee-colony-metaphor.md  waggle-dance.md
website/docs/how-to-guides/: deploy-production.md  overview.md
website/docs/reference/: api-overview.md
website/docs/tutorials/: dataframe-operations.md  getting-started.md  streaming-basics.md
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: index.tsx
