[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveframe"
version = "0.3.0-dev"
description = "A bee-inspired distributed data processing framework - biomimetic alternative to Apache Spark"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "HiveFrame Contributors"}
]
keywords = [
    "data-processing",
    "distributed-computing",
    "biomimicry",
    "swarm-intelligence",
    "bee-algorithm",
    "spark-alternative",
    "dataframe",
    "streaming",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

# Optional connectors and integrations
kafka = [
    "kafka-python>=2.0",
]
postgres = [
    "psycopg2-binary>=2.9",
]
http = [
    "requests>=2.28",
    "aiohttp>=3.8",
]
monitoring = [
    "prometheus-client>=0.16",
]

# Bundle all optional production dependencies
production = [
    "hiveframe[kafka,postgres,http,monitoring]",
]

# All dependencies including dev
all = [
    "hiveframe[production,dev]",
]

[project.urls]
Homepage = "https://github.com/hiveframe/hiveframe"
Documentation = "https://hiveframe.readthedocs.io"
Repository = "https://github.com/hiveframe/hiveframe"
Issues = "https://github.com/hiveframe/hiveframe/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hiveframe*"]

[tool.setuptools.package-data]
hiveframe = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "N802",  # Function name should be lowercase (intentional Spark-like camelCase)
    "N818",  # Exception name should end with Error (intentional naming)
    "E402",  # Module level import not at top (intentional for backward compatibility)
    "F821",  # Undefined name (forward references in type hints)
]

[tool.ruff.lint.per-file-ignores]
# ui.py contains embedded HTML/CSS/JS templates that can't be reformatted
"src/hiveframe/notebooks/ui.py" = ["E501", "W291", "W293"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
